--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Kalpavriksha</title>
     <meta name="description" content="A collection of thoughts on technology, growth, and life" />
 
+    <!-- Open Graph Meta Tags (Default) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Kalpavriksha" />
+    <meta property="og:description" content="A collection of thoughts on technology, growth, and life" />
+    <meta property="og:url" content="https://shivam-tripathi.github.io" />
+    <meta property="og:image" content="https://shivam-tripathi.github.io/banyan.webp" />
+    <meta property="og:site_name" content="Kalpavriksha" />
+
+    <!-- Twitter Card Meta Tags (Default) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Kalpavriksha" />
+    <meta name="twitter:description" content="A collection of thoughts on technology, growth, and life" />
+    <meta name="twitter:image" content="https://shivam-tripathi.github.io/banyan.webp" />
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
